# dify-plugins

./: .gitignore  .gitmodules  AKShare 股票数据插件详细功能文档.md  AKShare-Stockdata-plugin-v0.7.0-20251106.difypkg  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.7.0.md  adaptive_image_enhancer.difypkg  aigc_detection.difypkg  image enhancer  openai_api_compatible_zjl.difypkg  rjgf_model_api.difypkg  rjgf_open_api.difypkg  runjian  sleep.difypkg  个股诊断助手.yml
adanos-software/adanos-market-sentiment/: .difyignore  .gitignore  PRIVACY.md  README.md  adanos-market-sentiment-0.0.1.difypkg  main.py  manifest.yaml  pyproject.toml
adanos-software/adanos-market-sentiment/provider/: adanos.py  adanos.yaml
adanos-software/adanos-market-sentiment/tests/: test_client.py
adanos-software/adanos-market-sentiment/tools/: base.py  client.py  crypto_sentiment.py  crypto_sentiment.yaml  market_sentiment.py  market_sentiment.yaml  stock_sentiment.py  stock_sentiment.yaml  trending_assets.py  trending_assets.yaml
olostep/olostep/: PRIVACY.md  README.md  manifest.yaml  olostep.difypkg  pyproject.toml  requirements.txt
olostep/olostep/provider/: olostep.py  olostep.yaml
olostep/olostep/tools/: answer.py  answer.yaml  crawl.py  crawl.yaml  map.py  map.yaml  scrape.py  scrape.yaml  search.py  search.yaml
zhengyanglsun/iflow_search/: .difyignore  PRIVACY.md  README.md  iflow_search-0.0.1.difypkg  manifest.yaml  pyproject.toml  requirements.txt
zhengyanglsun/iflow_search/provider/: iflow_search.py  iflow_search.yaml
zhengyanglsun/iflow_search/tools/: _client.py  _errors.py  iflow_image_search.py  (+5 more)
(+1946 files in other folders)
