[project]
name = "dify-plugin-adanos"
version = "0.0.1"
description = "Adanos Market Sentiment tools for Dify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify_plugin>=0.9.0,<0.10.0",
    "requests>=2.32.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
